Updates from Overleaf

--- a/latex/HS_Oceanic.bib
+++ b/latex/HS_Oceanic.bib
@@ -81,6 +81,13 @@
   publisher={Cambridge University Press}
 }
 
+@book{gladwin2009east,
+  title={East is a big bird: Navigation and logic on Puluwat Atoll},
+  author={Gladwin, Thomas and Gladwin, Thomas},
+  year={2009},
+  publisher={Harvard University Press}
+}
+
 @article{evans2021uses,
   title={The uses and abuses of tree thinking in cultural evolution},
   author={Evans, Cara L and Greenhill, Simon J and Watts, Joseph and List, Johann-Mattis and Botero, Carlos A and Gray, Russell D and Kirby, Kathryn R},
@@ -90,6 +97,22 @@
   pages={20200056},
   year={2021},
   publisher={The Royal Society}
+}
+
+@article{rolett2002voyaging,
+  title={Voyaging and interaction in ancient East Polynesia},
+  author={Rolett, Barry V},
+  journal={Asian Perspectives},
+  pages={182--194},
+  year={2002},
+  publisher={University of Hawai'i Press}
+}
+
+@book{irwin1994prehistoric,
+  title={The prehistoric exploration and colonisation of the Pacific},
+  author={Irwin, Geoffrey},
+  year={1994},
+  publisher={Cambridge University Press}
 }
 
 
@@ -1771,13 +1794,6 @@
   publisher = {{Taylor \& Francis}},
   journal = {Economic History of Developing Regions},
   number = {1}
-}
-
-@book{gladwin2009east,
-  title = {East {{Is}} a {{Big Bird}}: {{Navigation}} and {{Logic}} on {{Puluwat Atoll}}},
-  author = {Gladwin, Thomas and Gladwin, Thomas},
-  year = {2009},
-  publisher = {{Harvard University Press}}
 }
 
 @book{glottolog3,
@@ -5607,6 +5623,13 @@ Scripts},
   url = {https://CRAN.R-project.org/doc/Rnews/},
 }
 
+@book{foucault2007security,
+  title={Security, territory, population: lectures at the Coll{\`e}ge de France, 1977-78},
+  author={Foucault, Michel},
+  year={2007},
+  publisher={Springer}
+}
+
 @Book{sp2013,
   author = {Roger S. Bivand and Edzer Pebesma and Virgilio Gomez-Rubio},
   title = {Applied spatial data analysis with {R}, Second edition},
@@ -5615,10 +5638,23 @@ Scripts},
   url = {https://asdar-book.org/},
 }
 
+@article{pearl1995causal,
+  title={Causal diagrams for empirical research},
+  author={Pearl, Judea},
+  journal={Biometrika},
+  volume={82},
+  number={4},
+  pages={669--688},
+  year={1995},
+  publisher={Oxford University Press}
+}
+
+
 @book{mcelreath2020statistical,
   title={Statistical rethinking: A Bayesian course with examples in R and Stan},
   author={McElreath, Richard},
   year={2020},
+    edition={2nd},
   publisher={CRC press}
 }
 
